@@ -9,5 +9,5 @@ Alias /ezmlm-web/ /usr/local/share/ezmlm-web/www-data/
 # write access to the mailing list directories
 # see 'man ezmlm-web-make-suid' for details
 # e.g.: 'ezmlm-web-make-suid ezmlm /usr/local/bin/ezmlm-web'
-#ScriptAlias /cgi-bin/ezmlm-web /usr/local/bin/ezmlm-web
+#ScriptAlias /ezmlm-web /usr/local/bin/ezmlm-web
 
