@@ -78,10 +78,14 @@ body {
         background-position: left;
     }
 
-#main_content div.success,
+#main_content div.success {
+        color: #2e3436;
+        background-color: inherit;	/* just to avoid css syntax warnings */
+	}
+
 #main_content div.warning,
 #main_content div.error {
-        color: #2e3436;
+        color: #eeeeec;			/* the dark red background requires a light color */
         background-color: inherit;	/* just to avoid css syntax warnings */
 	}
 
