@@ -194,6 +194,7 @@ button, select { cursor: pointer; }
 	padding: 2%;
 	text-align: center;
 	font-style: italic;
+	font-weight: bold;
 	font-size: 90%;
 	}
 
